Fix missing padding

--- a/src/Weaver.WebApp/packages/shared/src/components/code-block/code-block.module.scss
+++ b/src/Weaver.WebApp/packages/shared/src/components/code-block/code-block.module.scss
@@ -7,6 +7,10 @@ $gutter-width: 48px;
   align-items: stretch;
   height: 34px;
   gap: 0;
+
+  &-tools {
+    padding-right: .35rem;
+  }
 }
 
 .tab {
